feat: Add rhombitrihexagonal type to 'grid.pattern_polygon_tiling()'
* Also now exports `names_polygon_tiling` with all supported types
* Tiling unit tests now use a larger spacing

--- a/README.Rmd
+++ b/README.Rmd
@@ -86,7 +86,7 @@ grid.pattern_weave(x_hex, y_hex, type = "satin",
              density = 0.3)
 ```
 ```{r truncated_hexagonal}
-gp <- gpar(fill = c("yellow", "red", "blue"))
+gp <- gpar(fill = c("yellow", "blue", "red"))
 grid.pattern_polygon_tiling(x_hex, y_hex, type = "truncated_hexagonal", 
                             spacing = 0.15, gp = gp)
 ```
