--- a/vignettes/tiling.Rmd
+++ b/vignettes/tiling.Rmd
@@ -14,6 +14,7 @@ vignette: >
 * [Triangular tiling](#triangle)
 * [Square tiling](#square)
 * [Hexagonal tiling](#hexagon)
+* [Snub square tiling](#snubsquare)
 * [Truncated square tiling](#truncatedsquare)
 * [Truncated hexagonal tiling](#truncatedhex)
 * [Trihexagonal tiling](#trihexagon)
@@ -168,6 +169,46 @@ pushViewport(viewport(x=0.75, y=0.25, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = yellow, col = NA))
 gp <- gpar(fill = red, col = "black")
 grid.hexagonal_tiling(shape = "star6", spacing = 0.3, gp = gp)
+popViewport()
+add_borders()
+```
+
+<a name=snubsquare>Snub square tiling</a>
+-----------------------------------------
+
+We can achieve the two [uniform colorings of a snub square tiling](https://en.wikipedia.org/wiki/Snub_square_tiling) using a "star4" shape and a "convex4" shape.
+
+```{r}
+grid.snub_square <- function(..., gp_sq, gp_sq2 = gp_sq, gp_tri = gp_sq) {
+    scale_star <- star_scale(4, 90 + 60, external = TRUE)
+    grid.polygon(x_sq, y_sq, gp = gp_sq)
+    grid.pattern_regular_polygon(shape = "star4", scale = scale_star,
+                                 angle = 0, rot = 15, spacing = 0.2,
+                                 density = 1.4, gp = gp_tri)
+    grid.pattern_regular_polygon(shape = "convex4", scale = scale_star,
+                                 angle = 0, rot = 60, spacing = 0.2,
+                                 density = scale_star * 1.4, gp = gp_sq2)
+}
+
+# 2 color uniform snub square tiling
+pushViewport(viewport(x=0.25, y=0.75, width=0.5, height=0.5))
+gp_y <- gpar(fill = yellow, col = "black")
+gp_r <- gpar(fill = red, col = "black")
+grid.snub_square(gp_sq = gp_y, gp_tri = gp_r)
+popViewport()
+
+# 3 color uniform snub square tiling
+pushViewport(viewport(x=0.75, y=0.75, width=0.5, height=0.5))
+gp_b <- gpar(fill = blue, col = "black")
+grid.snub_square(gp_sq = gp_r, gp_sq2 = gp_b, gp_tri = gp_y)
+popViewport()
+
+# 1 color uniform hexagonal tiling
+pushViewport(viewport(x=0.25, y=0.25, width=0.5, height=0.5))
+grid.snub_square(gp_sq = gp_y)
+popViewport()
+
+pushViewport(viewport(x=0.75, y=0.25, width=0.5, height=0.5))
 popViewport()
 add_borders()
 ```
