feat: Support "3.3*30.3.3*30" polygon tiling
* `grid.pattern_polygon_tiling()` now supports a "3.3*30.3.3*30"
  type which implements a regular (star) polygon tiling of
  triangles and three-pointed stars.

progress on #42

--- a/vignettes/tiling.Rmd
+++ b/vignettes/tiling.Rmd
@@ -337,7 +337,8 @@ popViewport()
 # 'star3' trihexagonal tiling
 pushViewport(viewport(x=0.25, y=0.25, width=0.5, height=0.5))
 grid.polygon(x_sq, y_sq, gp = gpar(fill = red, col = NA))
-grid.trihexagonal_tiling(shape = "star3", scale = 0.2, density=1.65, gp = gp)
+scale <- star_scale(3, 30)
+grid.trihexagonal_tiling(shape = "star3", scale = scale, density=1.57, gp = gp)
 popViewport()
 
 # 'convex3' trihexagonal tiling
